# Healthcare-Predictive-MLOps

./: .gitignore  LICENSE  Makefile  README.md  databricks.yml  pyproject.toml
.github/agents/: project-validator.agent.md
.github/workflows/: cd.yml  ci.yml
environments/: dev.yml  prod.yml  stg.yml
notebooks/: 01_ingest_raw_data.py  02_feature_engineering.py  03_model_training.py  05_batch_inference.py  05_stream_source_ingestion.py  06_streaming_inference.py  07_batch_inference.py  07_streaming_inference.py  08_data_quality.py  08_stream_source_ingestion.py  09_model_training.py  09_seed_table_bootstrap.py  10_model_evaluation.py  10_use_case_dual_algo_training.py
resources/: batch_inference_job.yml  feature_engineering_job.yml  ml_pipeline_workflow.yml  model_training_job.yml  seed_table_bootstrap_job.yml  stream_source_ingestion_job.yml  streaming_inference_job.yml  use_case_model_training_job.yml
scripts/: upload_data.sh
src/healthcare_mlops/: __init__.py  config.py  data_loader.py  evaluate.py  feature_engineering.py  inference.py  train.py
tests/: test_config.py  test_feature_engineering.py
